@@ -1,3 +1,7 @@
+2002-09-16  Junichi Uekawa  <dancer@debian.org>
+
+	* ja.po: update 
+
 2002-09-14  Junichi Uekawa  <dancer@debian.org>
 
 	* ja.po: updated translation
